--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
-<!DOCTYPE html>
-<html lang="en-ca">
+<!doctype html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>Stegosaurus</title>
-  <link href="css/main.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="UTF-8">
+<title>Stegosaurus</title>
+<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
+	<img src="../dsn1675-exercise-1/images/stegosaurus.jpg">
+	
+	<div class= "quote">
+	
+	<p> <em>There was more time between the Stegosaurus and the T-Rex than between T-rex and you.</em></p>
+	</div>
+	
+		<h1>Stegosaurus</h1>
 
-There was more time between the Stegosaurus and the T-Rex than between T-Rex and you.
+<div class="box1">
+	<h2>PERIOD</h2>
+		<p>Late Jurassic</p>
+</div> <!--ends box -->
+
+<div class="box2">
+	<h2>DIET</h2>
+		<p>Herbivore</p>
+</div> <!--ends box -->
+
+<div class="box3">
+	<h2>LENGTH</h2>
+		<p>9 m</p>
+</div> <!--ends box -->
 
 
-Stegosaurus
-
-Period
-Late Jurassic
-
-Diet
-Herbivore
-
-Length
-9&nbsp;m
 
 </body>
 </html>
